V1.6.2
Enhancements/Fixes
- Catch and log connection exceptions.
- Fix bug when logging connection failures.
- Add TLS support.
- Fixed console and file logging bug.

Internal Improvements
= Run tests against WeeWX master.
- Additional tests.
- Remove dependency on WeeWX when running unit tests. (Still necessary for integration tests.)
- Ability to run build locally.

V1.6.1
Enhancements/Fixes
- Fixed the cacheing of archive record fields when using the new field configuration.
- Fixed the lookup of individual payloads when using the new field configuration. 
  It will always use the full topic and the 'name = 'option must be used if only a portion is the WeeWX name.
- Fixed the MQTT native logging.
- Changed the example MessageCallbackProvider to be a simple XML parser.
- Added some unit tests for the example MessageCallbackProvider.

Internal Improvements
- Improved the integration test environment.
- Improved the debugging environment.

V1.6.0
Enhancements/Fixes
- Move the configuration of fields under the [[topics]] section (#72)
  This also deprecates the [[archive_field_cache]], full_topic_fieldname, and contains_total.
  Note, the existing configuration options can still be used; but they will be removed in a future release.
- Enable mapping the same incoming fieldname to a different WeeWX field based on MQTT message content.(#80)
- Log MQTT connect, disconnect, and subscription API information at the info level instead debug level.

V1.5.3
Enhancements/Fixes
- Added support for ignoring fields (#63).
- Support mixed units in json and keyword payloads (#58).
- Support for full_topic_fieldname with json payload (#71).
- Support cacheing of archive record fields (service only) (#68)
- Fixed bug with nested json (#60).
- Fixed bug with wind data across multiple individual topics (#59).
- Fix driver defaulting the archive inal to 300 (#64).
- Cleaned up/improved logging.
- Add support for python 3.5.
- Add support back to WeeWX 3.7.1.

Internal Improvements